Fix alignment of editing select

--- a/pages/scss/watching.scss
+++ b/pages/scss/watching.scss
@@ -536,7 +536,13 @@ html.settings-page .screen:not(.horizontal) {
             left: 0;
             width: 100%;
             height: 100%;
+            display: flex;
+            align-items: center;
             grid-column: 1 / 3;
+        }
+
+        &:not(.editing) .editing-anchor {
+            pointer-events: none;
         }
     }
 }
